testdocker compose up
Signed-off-by: Swikriti Tripathi <swikriti808@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,9 @@ jobs:
           openssl req -subj '/CN=nextcloud.local/C=NP/L=Pokhara' -x509 -sha256 -nodes -days 3650 -newkey rsa:2048 -keyout ./apps/integration_openproject/ci/data/ssl/nextcloud.local.key -out ./apps/integration_openproject/ci/data/ssl/nextcloud.local.crt
           sudo update-ca-certificates
           ls ./apps/integration_openproject/ci/data/ssl
-          docker compose version
+          cd apps/integration_openproject/ci
+          docker compose up nextcloud proxy openproject
+
 #      - name: JS Code Coverage Summary Report
 #        if: ${{ github.event_name == 'pull_request' && matrix.nextcloudVersion == 'master' && matrix.phpVersion == '8.1' }}
 #        uses: romeovs/lcov-reporter-action@v0.3.1
