--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,16 +105,20 @@ jobs:
           sudo update-ca-certificates
           ls ./apps/integration_openproject/ci/data/ssl
           cd apps/integration_openproject/ci
-          docker compose up nextcloud proxy openproject -d
+          docker compose up nextcloud proxy openproject start_dependencies -d
+          until curl -s -f http://nextcloud.local/status.php | grep '"installed":true'; do echo .; sleep 10; done
 
-      - name: wait on OpenProject
-        uses: iFaxity/wait-on-action@v1
-        with:
-          resource: http-get://host.docker.internal:3000/api/v3/
-          timeout: 240000
+#      - name: wait on OpenProject
+#        uses: iFaxity/wait-on-action@v1
+#        with:
+#          resource: http-get://host.docker.internal:3000/api/v3/
+#          timeout: 240000
+
+      - name: try Nextcloud
+        run: curl http://nextcloud.local/status.php -v
 
       - name: wait on Nextcloud
-        run: until curl -s -f http://nextcloud/status.php | grep '"installed":true'; do echo .; sleep 10; done
+        run: until curl -s -f http://nextcloud.local/status.php | grep '"installed":true'; do echo .; sleep 10; done
 
       - name: try Nextcloud 1
         run: curl http://nextcloud.local/status.php -v
