--- a/ci/docker-compose.yml
+++ b/ci/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "${PROXY_PORT_HTTPS:-443}:443"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - ./data/ssl/:/etc/nginx/certs
+      - /home/runner/work/integration_openproject/integration_openproject/server/apps/integration_openproject/ci/data/ssl:/etc/nginx/certs
     environment:
       DHPARAM_BITS: 2048
       DHPARAM_GENERATION: "false"
@@ -22,7 +22,7 @@ services:
     networks:
       default:
         aliases:
-          - nextcloud${DOMAIN_SUFFIX}
+          - nextcloud.local
 
   nextcloud:
     image: ghcr.io/juliushaertl/nextcloud-dev-php${PHP_VERSION:-81}:latest
@@ -31,7 +31,7 @@ services:
       NEXTCLOUD_AUTOINSTALL: "YES"
       NEXTCLOUD_AUTOINSTALL_APPS:
       WITH_REDIS: "YES"
-      VIRTUAL_HOST: "nextcloud${DOMAIN_SUFFIX}"
+      VIRTUAL_HOST: "nextcloud.local"
       ADDITIONAL_APPS_PATH:
       NEXTCLOUD_TRUSTED_DOMAINS:
       PRIMARY: ${PRIMARY}
@@ -48,6 +48,11 @@ services:
       - proxy
     extra_hosts:
       - host.docker.internal:host-gateway
+    healthcheck:
+      test: curl -f http://nextcloud.local/status.php || exit 1
+      interval: 30s
+      timeout: 30s
+      retries: 5
 
   database-mysql:
     image: mariadb:10.6
@@ -93,15 +98,20 @@ services:
     extra_hosts:
       - host.docker.internal:host-gateway
     volumes:
-      - ./data/ssl/:/usr/local/share/ca-certificates
+      - /home/runner/work/integration_openproject/integration_openproject/server/apps/integration_openproject/ci/data/ssl:/usr/local/share/ca-certificates
+    healthcheck:
+      test: curl -f http://host.docker.internal:3000/status.php || exit 1
+      interval: 30s
+      timeout: 30s
+      retries: 5
 #    command: ["sh", "-c", "sudo update-ca-certificates && exec ./docker/prod/supervisord"]
 
-  start_dependencies:
-    image: dadarek/wait-for-dependencies
-    depends_on:
-      - proxy
-      - openproject
-    command: proxy:443 proxy:80 openproject:80
+#  start_dependencies:
+#    image: dadarek/wait-for-dependencies
+#    depends_on:
+#      - proxy
+#      - openproject
+#    command: proxy:443 proxy:80 openproject:80
 
 volumes:
   data:
