try running plasm with composer
Signed-off-by: Swikriti Tripathi <swikriti808@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
         run: |
           if [[ ${{ matrix.nextcloudVersion }} == "master" ]]
           then
-            make psalm
+            composer run psalm
           else
             make phpstan
           fi
