disable psalm for nextcloud master
Signed-off-by: Swikriti Tripathi <swikriti808@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,10 +73,8 @@ jobs:
 
       - name: PHP code analysis
         run: |
-          if [[ ${{ matrix.nextcloudVersion }} == "master" ]]
+          if [[ ${{ matrix.nextcloudVersion }} != "master" ]]
           then
-            make psalm
-          else
             make phpstan
           fi
 
