--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -1,10 +1,8 @@
 on:
-  push:
-    branches:
-      - 'master'
-  pull_request:
-  schedule:
-    - cron: '0 22 * * *' # run at 10 PM UTC
+  workflow_call:
+    inputs:
+      branch:
+        type: string
 
 name: CI
 
@@ -31,7 +29,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.event_name == 'schedule' && 'release/2.4' || 'master' }}
+          ref: ${{ inputs.branch }}
 
       - name: Setup PHP ${{ matrix.phpVersion }}
         uses: shivammathur/setup-php@v2
@@ -254,6 +252,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: integration_openproject
+          ref: ${{ inputs.branch }}
 
       - name: Checkout activity app
         uses: actions/checkout@v3
