Added separate digest for NC image
Signed-off-by: sagargurung1001@gmail.com <sagargurung1001@gmail.com>

--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -8,6 +8,10 @@ on:
   schedule:
     - cron: '0 22 * * *' # run at 10 PM UTC
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   builds:
     uses: ./.github/workflows/shared_workflow.yml
