--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -208,7 +208,7 @@ jobs:
 
     services:
       nextcloud:
-        image: ghcr.io/juliushaertl/nextcloud-dev-php${{ format('{0}{1}', matrix.phpVersionMajor,matrix.phpVersionMinor) }}:latest
+        image: ghcr.io/juliushaertl/nextcloud-dev-php${{ format('{0}{1}', matrix.phpVersionMajor,matrix.phpVersionMinor) }}:${{ matrix.phpVersionMajor == 7 && 'latest@sha256:2ab4bf7241fb6997d4819b5a32345b8cdb66ea27511c7b5698b77a592e09153f' || 'latest@sha256:7e9bb4cf6d232001b93add1b2a14628b000af1480ad11d6d7b3f93c14a9249b8' }}
         env:
           SQL: ${{ matrix.database }}
           SERVER_BRANCH: ${{ matrix.nextcloudVersion }}
