--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
 		"npm": "^8.0.0"
 	},
 	"dependencies": {
+		"@mdi/svg": "^7.3.67",
 		"@nextcloud/auth": "^2.0.0",
 		"@nextcloud/axios": "^2.1.0",
 		"@nextcloud/dialogs": "^3.2.0",
+		"@nextcloud/files": "^3.0.0-beta.26",
 		"@nextcloud/initial-state": "^2.0.0",
 		"@nextcloud/l10n": "^2.1.0",
 		"@nextcloud/moment": "^1.1.1",
