--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,3 +10,4 @@ parameters:
     excludePaths:
     	-  './lib/Reference/WorkPackageReferenceProvider.php'
     	- './tests/lib/Reference/WorkPackageReferenceProviderTest.php'
+    	- './lib/Listener/TermOfServiceAppEnabledEventListener.php'
