add tests for file version
Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -14,3 +14,4 @@ default:
         - SharingContext:
         - DirectUploadContext:
         - GroupfoldersContext:
+        - FilesVersionsContext:
