--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -74,15 +74,15 @@ jobs:
           cd server && git submodule update --init
           ./occ maintenance:install --admin-pass=admin
 
-      - name: PHP code analysis
-        run: |
-          if [[ ${{ matrix.nextcloudVersion }} != "stable28" ]]
-          then
-            make phpstan
-          fi
+#      - name: PHP code analysis
+#        run: |
+#          if [[ ${{ matrix.nextcloudVersion }} != "stable28" ]]
+#          then
+#            make phpstan
+#          fi
 
-      - name: PHP code style
-        run: composer run cs:check || ( echo 'Please run `composer run cs:fix` to format your code' && exit 1 )
+#      - name: PHP code style
+#        run: composer run cs:check || ( echo 'Please run `composer run cs:fix` to format your code' && exit 1 )
 
       - name: Install NPM Dependencies
         run: npm install
