--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -299,8 +299,7 @@ jobs:
           NEXTCLOUD_BASE_URL: http://nextcloud
           FILTER_TAGS: ${{
             matrix.nextcloudVersion == 'stable25' && '~@skipOnStable25' ||
-            matrix.nextcloudVersion == 'stable26' && '~@skipOnStable26' ||
-            '~@skip'
+            matrix.nextcloudVersion == 'stable26' && '~@skipOnStable26'
             }}
         run: |
           composer install --no-progress --prefer-dist --optimize-autoloader
