Refactor TOS sign for user OpenProject
Signed-off-by: sagargurung1001@gmail.com <sagargurung1001@gmail.com>

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -11,3 +11,4 @@ parameters:
     	-  './lib/Reference/WorkPackageReferenceProvider.php'
     	- './tests/lib/Reference/WorkPackageReferenceProviderTest.php'
     	- './lib/Listener/TermOfServiceAppEnabledEventListener.php'
+    	- './lib/Listener/NewTOSCreatedEventListener.php'
