resolve adress regarding ci
Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -297,7 +297,7 @@ jobs:
       - name: API Tests
         env:
           NEXTCLOUD_BASE_URL: http://nextcloud
-          FILTER_TAGS: ${{
+          BEHAT_FILTER_TAGS: ${{
             matrix.nextcloudVersion == 'stable25' && '~@skipOnStable25' ||
             matrix.nextcloudVersion == 'stable26' && '~@skipOnStable26' ||
             ''
