--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -297,6 +297,11 @@ jobs:
       - name: API Tests
         env:
           NEXTCLOUD_BASE_URL: http://nextcloud
+          BEHAT_FILTER_TAGS: ${{
+            matrix.nextcloudVersion == 'stable25' && '~@skipOnStable25' ||
+            matrix.nextcloudVersion == 'stable26' && '~@skipOnStable26' ||
+            ''
+            }}
         run: |
           composer install --no-progress --prefer-dist --optimize-autoloader
           until curl -s -f http://nextcloud/status.php | grep '"installed":true'; do echo .; sleep 10; done
