--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -12,7 +12,12 @@ jobs:
     strategy:
       matrix:
         nextcloudVersion: [ stable26, stable27, stable28, stable29 ]
-        phpVersion: [ 8.0, 8.1 ]
+        phpVersion: [ 8.0, 8.1, 8.2, 8.3]
+        exclude:
+          - nextcloudVersion: stable26
+            phpVersion: 8.3
+          - nextcloudVersion: stable27
+            phpVersion: 8.3
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout for nightly CI
@@ -162,7 +167,7 @@ jobs:
       matrix:
         nextcloudVersion: [ stable26, stable27, stable28, stable29 ]
         phpVersionMajor: [ 8 ]
-        phpVersionMinor: [ 1 ]
+        phpVersionMinor: [ 2 ]
         database: [pgsql, mysql]
     runs-on: ubuntu-20.04
     container:
