--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -11,15 +11,8 @@ jobs:
     name: unit tests and linting
     strategy:
       matrix:
-        nextcloudVersion: [ stable25, stable26, stable27, stable28 ]
-        phpVersion: [ 7.4, 8.0, 8.1 ]
-        exclude:
-          - nextcloudVersion: stable26
-            phpVersion: 7.4
-          - nextcloudVersion: stable27
-            phpVersion: 7.4
-          - nextcloudVersion: stable28
-            phpVersion: 7.4
+        nextcloudVersion: [ stable26, stable27, stable28 ]
+        phpVersion: [ 8.0, 8.1 ]
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout for nightly CI
@@ -167,35 +160,10 @@ jobs:
     name: API tests
     strategy:
       matrix:
-        nextcloudVersion: [ stable25, stable26, stable27, stable28 ]
-        phpVersionMajor: [ 7, 8 ]
-        phpVersionMinor: [ 4, 1 ]
+        nextcloudVersion: [ stable26, stable27, stable28 ]
+        phpVersionMajor: [ 8 ]
+        phpVersionMinor: [ 1 ]
         database: [pgsql, mysql]
-        exclude:
-          - nextcloudVersion: stable26
-            phpVersionMajor: 7
-          - phpVersionMajor: 7
-            phpVersionMinor: 0
-          - phpVersionMajor: 7
-            phpVersionMinor: 1
-          - phpVersionMajor: 8
-            phpVersionMinor: 4
-          - nextcloudVersion: stable27
-            phpVersionMajor: 7
-          - phpVersionMajor: 7
-            phpVersionMinor: 0
-          - phpVersionMajor: 7
-            phpVersionMinor: 1
-          - phpVersionMajor: 8
-            phpVersionMinor: 4
-          - nextcloudVersion: stable28
-            phpVersionMajor: 7
-          - phpVersionMajor: 7
-            phpVersionMinor: 0
-          - phpVersionMajor: 7
-            phpVersionMinor: 1
-          - phpVersionMajor: 8
-            phpVersionMinor: 4
     runs-on: ubuntu-20.04
     container:
       image: ubuntu:latest
@@ -298,7 +266,6 @@ jobs:
         env:
           NEXTCLOUD_BASE_URL: http://nextcloud
           BEHAT_FILTER_TAGS: ${{
-            matrix.nextcloudVersion == 'stable25' && '~@skipOnStable25' ||
             matrix.nextcloudVersion == 'stable26' && '~@skipOnStable26' ||
             ''
             }}
