--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -169,19 +169,19 @@ jobs:
         phpVersionMajor: [ 8 ]
         phpVersionMinor: [ 0, 1, 2, 3 ]
         database: [pgsql, mysql]
-#        isScheduledEventNightly:
-#          - ${{github.event_name != 'schedule'}}
+        isScheduledEventNightly:
+          - ${{github.event_name != 'schedule'}}
         exclude:
           - nextcloudVersion: stable26
             phpVersionMinor: 3
           - nextcloudVersion: stable27
             phpVersionMinor: 3
-#          - isScheduledEventNightly: true
-#            phpVersionMinor: 0
-#          - isScheduledEventNightly: true
-#            phpVersionMinor: 1
-#          - isScheduledEventNightly: true
-#            phpVersionMinor: 3
+          - isScheduledEventNightly: true
+            phpVersionMinor: 0
+          - isScheduledEventNightly: true
+            phpVersionMinor: 1
+          - isScheduledEventNightly: true
+            phpVersionMinor: 3
     runs-on: ubuntu-20.04
     container:
       image: ubuntu:latest
