refactor-on-user-creation-carol (#634)
Signed-off-by: sagargurung1001@gmail.com <sagargurung1001@gmail.com>
Co-authored-by: sagargurung1001@gmail.com <sagargurung1001@gmail.com>

--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -192,6 +192,7 @@ jobs:
           VIRTUAL_HOST: "nextcloud"
           WITH_REDIS: "YES"
           NEXTCLOUD_AUTOINSTALL_APPS_WAIT_TIME: 120
+        options: --name=nextcloud
         volumes:
           - /home/runner/work/integration_openproject/integration_openproject:/var/www/html/apps-shared
 
@@ -248,6 +249,9 @@ jobs:
           repository: nextcloud/groupfolders
           path: groupfolders
           ref: ${{ matrix.nextcloudVersion }}
+
+      - name: install docker
+        uses: papodaca/install-docker-action@main
 
       - name: Setup PHP ${{ format('{0}.{1}', matrix.phpVersionMajor,matrix.phpVersionMinor) }}
         uses: shivammathur/setup-php@v2
