Run PHP 8.3 in CI for API test
Signed-off-by: sagargurung1001@gmail.com <sagargurung1001@gmail.com>

--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -166,18 +166,18 @@ jobs:
         phpVersionMinor: [ 0, 1, 2, 3 ]
         database: [pgsql, mysql]
         isScheduledEventNightly:
-          - ${{github.event_name != 'schedule'}}
+          - ${{github.event_name == 'schedule'}}
         exclude:
           - nextcloudVersion: stable26
             phpVersionMinor: 3
           - nextcloudVersion: stable27
             phpVersionMinor: 3
-          - isScheduledEventNightly: true
+          - isScheduledEventNightly: false
             phpVersionMinor: 0
-          - isScheduledEventNightly: true
+          - isScheduledEventNightly: false
             phpVersionMinor: 1
-          - isScheduledEventNightly: true
-            phpVersionMinor: 3
+          - isScheduledEventNightly: false
+            phpVersionMinor: 2
     runs-on: ubuntu-20.04
     container:
       image: ubuntu:latest
