add support for integration_app in nextcloud master
Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -11,13 +11,15 @@ jobs:
     name: unit tests and linting
     strategy:
       matrix:
-        nextcloudVersion: [ stable26, stable27, stable28, stable29 ]
+        nextcloudVersion: [ stable26, stable27, stable28, stable29, master ]
         phpVersion: [ 8.0, 8.1, 8.2, 8.3]
         exclude:
           - nextcloudVersion: stable26
             phpVersion: 8.3
           - nextcloudVersion: stable27
             phpVersion: 8.3
+          - nextcloudVersion: master
+            phpVersion: 8.0
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout for nightly CI
@@ -161,10 +163,25 @@ jobs:
     name: API tests
     strategy:
       matrix:
-        nextcloudVersion: [ stable26, stable27, stable28, stable29 ]
+        nextcloudVersion: [ stable26, stable27, stable28, stable29, master ]
         phpVersionMajor: [ 8 ]
         phpVersionMinor: [ 2 ]
         database: [pgsql, mysql]
+        isScheduledEventNightly:
+          - ${{github.event_name == 'schedule'}}
+        exclude:
+          - nextcloudVersion: stable26
+            phpVersionMinor: 3
+          - nextcloudVersion: stable27
+            phpVersionMinor: 3
+          - nextcloudVersion: master
+            phpVersionMinor: 0
+          - isScheduledEventNightly: false
+            phpVersionMinor: 0
+          - isScheduledEventNightly: false
+            phpVersionMinor: 1
+          - isScheduledEventNightly: false
+            phpVersionMinor: 2
     runs-on: ubuntu-20.04
     container:
       image: ubuntu:latest
