[Backport] support nextcloud30 and remove safe (#653)
* add support for integration_app in nextcloud master

Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

* remove safe as there is removed of thecodingmachine module

Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

* make return JSON_EXCEPTION for json_decode and json_encode

Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

---------

Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -11,13 +11,15 @@ jobs:
     name: unit tests and linting
     strategy:
       matrix:
-        nextcloudVersion: [ stable26, stable27, stable28, stable29 ]
+        nextcloudVersion: [ stable26, stable27, stable28, stable29, master ]
         phpVersion: [ 8.0, 8.1, 8.2, 8.3]
         exclude:
           - nextcloudVersion: stable26
             phpVersion: 8.3
           - nextcloudVersion: stable27
             phpVersion: 8.3
+          - nextcloudVersion: master
+            phpVersion: 8.0
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout for nightly CI
@@ -161,7 +163,7 @@ jobs:
     name: API tests
     strategy:
       matrix:
-        nextcloudVersion: [ stable26, stable27, stable28, stable29 ]
+        nextcloudVersion: [ stable26, stable27, stable28, stable29, master ]
         phpVersionMajor: [ 8 ]
         phpVersionMinor: [ 2 ]
         database: [pgsql, mysql]
