Backport the master PRs (#652)
* update the version of php in nightly ci (#631)

Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

* fix CI false status failure (#635)

Signed-off-by: sagargurung1001@gmail.com <sagargurung1001@gmail.com>
Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

* update php version to 8.2 for release workflow (#636)

Signed-off-by: sagargurung1001@gmail.com <sagargurung1001@gmail.com>
Signed-off-by: nabim777 <nabinalemagar019@gmail.com>

---------

Signed-off-by: nabim777 <nabinalemagar019@gmail.com>
Signed-off-by: sagargurung1001@gmail.com <sagargurung1001@gmail.com>
Co-authored-by: Sagar Gurung <46086950+SagarGi@users.noreply.github.com>

--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -165,8 +165,21 @@ jobs:
       matrix:
         nextcloudVersion: [ stable26, stable27, stable28, stable29, master ]
         phpVersionMajor: [ 8 ]
-        phpVersionMinor: [ 2 ]
+        phpVersionMinor: [ 0, 1, 2, 3 ]
         database: [pgsql, mysql]
+        isScheduledEventNightly:
+          - ${{github.event_name != 'schedule'}}
+        exclude:
+          - nextcloudVersion: stable26
+            phpVersionMinor: 3
+          - nextcloudVersion: stable27
+            phpVersionMinor: 3
+          - isScheduledEventNightly: true
+            phpVersionMinor: 0
+          - isScheduledEventNightly: true
+            phpVersionMinor: 1
+          - isScheduledEventNightly: true
+            phpVersionMinor: 3
     runs-on: ubuntu-20.04
     container:
       image: ubuntu:latest
